<resources>
    <string name="app_name" translatable="false">TravelTogether</string>
    <string name="profile_name">Profile</string>
    <string name="profile_edit_picture">Edit Picture</string>
    <string name="profile_username">Username</string>
    <string name="profile_description">Description</string>
    <string name="profile_edit_Description">Edit Description</string>
    <string name="profile_background">Profile Background</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_edit_pic" translatable="false">Profile Edit Pic Picture</string>
    <string name="profile_container" translatable="false">Profile Container</string>
    <string name="profile_description_container" translatable="false">Profile Description Container</string>
    <string name="enter_one_text_here">Enter one text here</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="take_a_picture">Take a picture</string>

    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title">title</string>
    <string name="starting_date">starting date</string>
    <string name="ending_date">ending date</string>
    <string name="time_posted">time posted</string>
    <string name="destination">destination</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
    <string name="post">post</string>
    <string name="number_people"># of people</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_change_pass" translatable="false">ChangePassActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="sign_in_text">Log In/Sign Up</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="main_screen_text">MAIN SCREEN</string>
    <string name="profile_text">Profile</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="change_language_text">Change Language</string>

    <string name="all_post_section_text">All Post Section</string>
    <string name="chat_section_text">Chat Section</string>
    <string name="news_section_text">News Section</string>
    <string name="saved_text">Saved</string>
    <string name="all_text">All</string>
    <string name="chat_text">Chat</string>
    <string name="new_text">New</string>
    <string name="news_text">News</string>
    <string name="saved_post_section_text">Saved Post Section</string>
    <string name="newest_popup_text">Newest Popup</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="save_title_text">Saved Posts</string>
    <string name="chat_title_text">Chat</string>
    <string name="new_title_text">New</string>
    <string name="all_title_text">All</string>
    <string name="news_title_text">News</string>
    <string name="change_password_text">change password</string>
    <string name="delete_account_text">Delete account</string>
    <string name="notify_when_activity_in_group_chat_text">Notify when activity in group chat</string>
    <string name="delete_acc_text">Delete Account</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="take_picture">Take a picture</string>
    <string name="add_description">Add your profile description here</string>
    <string name="edit_post_text">Edit Post</string>
    <string name="ending_date_text">ending date</string>
    <string name="delete_acc_question">Are you sure you want to delete your account?</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="error_text">Error</string>
    <string name="success_text">Success</string>
    <string name="enter_old_pwd_text">Please enter the old password</string>
    <string name="enter_new_pwd_text">Please enter the new password</string>
    <string name="reenter_pwd_text">Please re-enter the new password</string>
    <string name="same_new_pwd_text">Please enter the same new password!</string>
    <string name="cant_be_same_pwd_text">Old and new passwords can\'t be the same!</string>
    <string name="success_pwd_change_text">You have changed your password successfully</string>
    <string name="invalid_pwd_text">Password is not valid!</string>
    <string name="old_pwd_wrong_text">Old Password is wrong!</string>
    <string name="update_success_text">Updated successfully</string>
    <string name="sign_in_canceled_text">Sign in cancelled.</string>
    <string name="enter_old_password_text">Enter old password:</string>
    <string name="enter_new_password_text">Enter new password:</string>
    <string name="re_enter_the_same_password_text">Re-enter the same password:</string>
    <string name="submit_text">Submit</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>