<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ProfileActivity"
    tools:ignore="LabelFor">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/profile_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="36dp"
        tools:srcCompat="?attr/colorButtonNormal" />

    <ImageView
        android:id="@+id/profile_description_container"
        android:layout_width="373dp"
        android:layout_height="497dp"
        android:contentDescription="@string/profile_description_container"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/background"
        tools:srcCompat="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_editView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_one_text_here"
        android:importantForAutofill="no"
        android:inputType="textShortMessage|textLongMessage|textAutoCorrect|text"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>