<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ChangePassActivity"
    tools:deviceIds="wear"
    tools:ignore="MissingClass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding">

        <ImageView
            android:id="@+id/profile_description_container2"
            android:layout_width="366dp"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/profile_description_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startin_date"
            app:layout_constraintVertical_bias="0.19"
            app:srcCompat="@android:color/darker_gray"
            tools:srcCompat="@android:color/darker_gray" />

        <TextView
            android:id="@+id/description_field"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/profile_description_container2"
            app:layout_constraintEnd_toEndOf="@+id/profile_description_container2"
            app:layout_constraintStart_toStartOf="@+id/profile_description_container2"
            app:layout_constraintTop_toBottomOf="@+id/profile_description_title3"
            app:layout_constraintVertical_bias="0.101" />

        <TextView
            android:id="@+id/profile_description_title3"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/profile_description"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_description_container2"
            app:layout_constraintEnd_toEndOf="@+id/profile_description_container2"
            app:layout_constraintHorizontal_bias="0.141"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_description_container2"
            app:layout_constraintVertical_bias="0.07999998" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_description_container2"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@+id/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="170dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@+id/startin_date"
            app:layout_constraintEnd_toEndOf="@+id/startin_date"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.807" />

        <TextView
            android:id="@+id/number_people"
            android:layout_width="170dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toEndOf="@+id/destination"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.808" />

        <TextView
            android:id="@+id/startin_date"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.329" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="170dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@+id/profile_description_container2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toEndOf="@+id/startin_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.853" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>